# Bot_rust_hybrid-bot

./: .gitignore  Cargo.toml  README.md  deploy_to_screen.sh
proto/: bot_messaging.proto  data_service.proto
services/ai-core/: Cargo.toml  build.rs
services/ai-core/src/: main.rs
services/db-manager/: Cargo.toml  build.rs
services/db-manager/src/: main.rs
services/gateway-discord/: Cargo.toml  build.rs
services/gateway-discord/src/: main.rs  main.rs.bak
services/gateway-line/: Cargo.toml
services/gateway-line/src/: main.rs
services/web-dashboard/: Cargo.toml
services/web-dashboard/src/: admin.rs  dashboard.rs  main.rs
src/: main.rs
