[workspace]
resolver = "2"
members = ["services/*"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.11"
prost = "0.12"
mongodb = "2.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
chrono = "0.4"
futures = "0.3"
rand = "0.8"
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs"] }
serenity = { version = "0.12", default-features = false, features = [
    "client", "gateway", "rustls_backend", "model", "utils",
    "voice", "cache", "http", "standard_framework"
] }
async-trait = "0.1"
