[package]
name = "ai-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
