[package]
name = "db-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
mongodb = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
