[package]
name = "gateway-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }

serenity = { version = "0.12", default-features = false, features = [
    "client", "gateway", "rustls_backend", "model", "utils",
    "voice", "cache", "http", "standard_framework"
] }
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.11"
