[package]
name = "web-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
